--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,3 +1,7 @@
+fizzbuzz.app.jwtSecret=blabla1234
+fizzbuzz.app.jwtExpirationMs=86400000
+
+
 
 spring.datasource.url=jdbc:h2:mem:testdb
 spring.datasource.driverClassName=org.h2.Driver
